
2018-07-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* scanner.l: allow floating-point literals containing no digit after
	  decimal point in significand (explicit specified in ACUCOBOL docs)
	* reserved.c, parser.y, field.c, tree.h: added parsing for VOLATILE clause
	* typeck.c (cb_build_expr): use correct line number for warning
	  "suggest parentheses around AND within OR"

2018-07-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y: adjusted length_of handling to distinguish constant-entry
	  from register

2018-07-18  Edward Hart <edward.dan.hart@gmail.com>

	* typeck.c: added checks for (RE)WRITE FILE f FROM literal (bug #411)
	* parser.y (file_control_entry): fixed regression caused when fixing
	  bug #405

2018-07-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* reserved.c, parser.y: added IBM's ALLOCATE format by including the
	  ignored LOC phrase

2018-07-05  Ron Norman <rjn@inglenet.com>

	* parser.y, scanner.l: removed LENGTH_OF as it is no longer used

2018-07-04  Edward Hart <edward.dan.hart@gmail.com>

	* tree.c (cb_build_picture): fixed calculation of number of decimal
	  digits in PICs with floating +/- after decimal point, e.g. --.--.
	  See bug #220

2018-07-04  Ron Norman <rjn@inglenet.com>

	* parser.y: accept both LENGTH and LENGTH OF in all places

2018-06-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_internal_function): fixed bug #98 "SIGSEGV
	  on CANCEL of RECURSIVE programs" by adjusting generation of
	  CANCEL callback

2018-06-28  Ron Norman <rjn@inglenet.com>

	* typeck.c (cb_build_expr): fix bug #526 - Check for properly formed
	  'Abbreviated conditional expressions'

2018-06-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* field.c (validate_usage): fixed SIGSEGV when PICTURE is missing

2018-06-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_emit_call): use X"nn" as name for error messages